# ReiDiscordBot

./: .breakpoints  .env  .py  README.md  bossNotification.py  coinflip.py  config.py  keep_alive.py  main.py  notification.py  pyproject.toml  read.md  requirements.txt  run.py
Priconne/: main.py  notification.py
