[tool.poetry]
name = "repl_python3_ReiBot"
version = "0.1.0"
description = ""
authors = ["LouisT123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pycrypto = "^2.6.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
